# linux-permission-manager

./: .env  Cargo.toml  FIX.md  install.sh
contrib/completion/: permctl.bash
contrib/systemd/: permctl.service  permctl.timer
docs/: permctl.1
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  manager.rs
