[package]
name = "linux-permission-manager"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav Gain <iamanubhavgain@gmail.com>"]
description = "A production-grade temporary permission manager for Linux systems"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
thiserror = "1.0"
directories = "5.0"
whoami = "1.4"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[[bin]]
name = "permctl"
path = "src/main.rs"